tests/test_data/CodeStructureSnippets/bad/expr_bad2.ifj21
require "ifj21"
function main()
    local vysl : number = "papa" + "bobo" / 90
end
main()